# metazpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Framework/: CMakeLists.txt
Framework/src/: MZConstants.cpp  MZConstants.hpp  MZStringUtils.hpp  MZTag.cpp  MZTag.hpp  MZTimeCode.cpp  MZTimeCode.hpp  MZTimedTextItem.cpp  MZTimedTextItem.hpp  MZVersion.cpp  MZVersion.hpp
